--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,20 +3,17 @@ project(OPP_NSU_LABS)
 
 set(CMAKE_CXX_STANDARD 17)
 
-set(CMAKE_CXX_COMPILER "/usr/bin/mpicxx")
+# set(CMAKE_CXX_COMPILER "/usr/bin/mpicxx")
 
 include_directories(/usr/include/mpi/)
 
-set(LAB1V1_SOURCE laboratory-1/version-1/main.cpp laboratory-1/version-1/mv/mvInit_1st.cpp laboratory-1/version-1/mv/mvOperations_1st.cpp)
+set(LAB1V1_SOURCE laboratory-1/version-1/main.cpp laboratory-1/version-1/mv/mvInit_l1_1st.cpp laboratory-1/version-1/mv/mvOperations_l1_1st.cpp)
 set(LAB1V2_SOURCE laboratory-1/version-2/main.cpp laboratory-1/version-2/mv/mvInit_2nd.cpp laboratory-1/version-2/mv/mvOperations_2nd.cpp)
 set(LAB1V3_SOURCE laboratory-1/version-3/main.cpp laboratory-1/version-3/mv/mvInit_3rd.cpp laboratory-1/version-3/mv/mvOperations_3rd.cpp)
 
-set(LAB2V1_SOURCE laboratory-2/version-1/main.cpp laboratory-2/version-1/mv/mvInit_1st.cpp laboratory-2/version-1/mv/mvOperations_1st.cpp)
-set(LAB2V2_SOURCE laboratory-2/version-2/main.cpp laboratory-2/version-2/mv/mvInit_2nd.cpp laboratory-2/version-2/mv/mvOperations_2nd.cpp)
+set(LAB2V1_SOURCE laboratory-2/version-1/main.cpp laboratory-2/version-1/mv/mvInit_l2_1st.cpp laboratory-2/version-1/mv/mvOperations_l2_1st.cpp)
+set(LAB2V2_SOURCE laboratory-2/version-2/main.cpp laboratory-2/version-2/mv/mvInit_l2_2nd.cpp laboratory-2/version-2/mv/mvOperations_l2_2nd.cpp)
 set(LAB2V3_SOURCE laboratory-2/version-3/main.cpp laboratory-2/version-3/mv/mvInit_3rd.cpp laboratory-2/version-3/mv/mvOperations_3rd.cpp)
 
-add_executable(laboratory-1-v1 ${LAB1V1_SOURCE})
-add_executable(laboratory-1-v2 ${LAB1V2_SOURCE})
-add_executable(laboratory-1-v3 ${LAB1V3_SOURCE})
-
 add_executable(laboratory-2-v1 ${LAB2V1_SOURCE})
+add_executable(laboratory-2-v2 ${LAB2V2_SOURCE})
