--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(OPP_NSU_LABS)
 
 set(CMAKE_CXX_STANDARD 17)
 
-# set(CMAKE_CXX_COMPILER "/usr/bin/mpicxx")
+set(CMAKE_CXX_COMPILER "/usr/bin/mpicxx")
 
 include_directories(/usr/include/mpi/)
 
@@ -15,6 +15,6 @@ set(LAB2V1_SOURCE laboratory-2/version-1/main.cpp laboratory-2/version-1/mv/mvIn
 set(LAB2V2_SOURCE laboratory-2/version-2/main.cpp laboratory-2/version-2/mv/mvInit_l2_2nd.cpp laboratory-2/version-2/mv/mvOperations_l2_2nd.cpp)
 set(LAB2V3_SOURCE laboratory-2/version-3/main.cpp laboratory-2/version-3/mv/mvInit_l2_3rd.cpp laboratory-2/version-3/mv/mvOperations_l2_3rd.cpp)
 
-add_executable(laboratory-2-v1 ${LAB2V1_SOURCE})
-add_executable(laboratory-2-v2 ${LAB2V2_SOURCE})
-add_executable(laboratory-2-v3 ${LAB2V3_SOURCE})
+set(LAB3_SOURCE laboratory-3/main_l3.cpp)
+
+add_executable(laboratory-3 ${LAB3_SOURCE})
