lab4 - consistent variant done and works very well

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,4 +19,5 @@ set(LAB3_SOURCE laboratory-3/main_l3.cpp)
 
 set(LAB4_SOURCE laboratory-4/main_l4.cpp)
 
+add_executable(laboratory-3 ${LAB3_SOURCE})
 add_executable(laboratory-4 ${LAB4_SOURCE})
